--- a/api_project/pubspec.yaml
+++ b/api_project/pubspec.yaml
@@ -27,6 +27,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  json_annotation: ^4.5.0
+  font_awesome_flutter: ^10.1.0
   flutter:
     sdk: flutter
 
@@ -37,6 +39,8 @@ dependencies:
   http: ^0.13.4
 
 dev_dependencies:
+  json_serializable: ^6.2.0
+  build_runner: ^2.1.11
   flutter_test:
     sdk: flutter
 
