--- a/api_project/pubspec.yaml
+++ b/api_project/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  form_field_validator: ^1.1.0
   json_annotation: ^4.5.0
   font_awesome_flutter: ^10.1.0
   flutter:
