--- a/api_project/pubspec.yaml
+++ b/api_project/pubspec.yaml
@@ -27,6 +27,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  provider: ^6.0.3
+  path_provider: ^2.0.10
+  image_picker: ^0.8.5+3
   form_field_validator: ^1.1.0
   json_annotation: ^4.5.0
   font_awesome_flutter: ^10.1.0
@@ -38,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  cross_file_image: ^0.0.2
 
 dev_dependencies:
   json_serializable: ^6.2.0
@@ -64,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/ks5RTu.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
