--- a/api_project/android/app/build.gradle
+++ b/api_project/android/app/build.gradle
@@ -20,7 +20,7 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
-
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
@@ -47,10 +47,9 @@ android {
         applicationId "com.example.api_project"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        minSdkVersion 19
+        multiDexEnabled true
+        
     }
 
     buildTypes {
@@ -65,7 +64,23 @@ android {
 flutter {
     source '../..'
 }
+buildscript {
+  repositories {
+    
+    google()  // Google's Maven repository
 
+  }
+
+}
 dependencies {
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.android.support:multidex:1.0.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    
+}
+allprojects {
+  repositories {
+    google()  // Google's Maven repository
+  }
 }
