--- a/api_project/pubspec.yaml
+++ b/api_project/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   cross_file_image: ^0.0.2
+  firebase_core: ^1.17.1
+  firebase_messaging: ^11.4.1
+  flutter_local_notifications: ^9.6.1
 
 dev_dependencies:
   json_serializable: ^6.2.0
